[package]
name = "webbie"
description = "A tiny local HTTP server to test web hooks or other incoming HTTP requests"
repository = "https://github.com/alexbaron-me/webbie"
license = "MIT"
authors = ["Alexander Baron <hey@alexbaron.me>"]
version = "0.1.0"
edition = "2021"

[lib]
name = "webbie"
path = "src/lib.rs"

[[bin]]
name = "webbie"
path = "src/main.rs"

[dependencies]
bytes = "1.10.1"
clap = { version = "4", features = ["derive"] }
colored = "3.0.0"
getset = "0.1.6"
lazy_static = "1.5.0"
syntect = "5.2.0"
tokio = { version = "1.47.0", features = ["full"] }
warp = "0.3.7"
